# SplitOp

./: Makefile  README.md  configure.ac  doc.config  inputs.ini  inputs.json
include/: array_structs.h  imag_time_prop.h  junction_hamiltonian.h  numerics.h  quantum_dynamics.h
src/: CMakeLists.txt  Makefile.am  array_structs.cpp  arrays.hpp  chebyshev.cpp  chebyshev.hpp  imag_time_prop.cpp  input_parser.cpp  input_parser.hpp  junction.cpp  junction.hpp  junction_hamiltonian.cpp  main.cpp  matrix.cpp  matrix.hpp  numerics.cpp  polynomial.cpp  polynomial.hpp  quantum_dynamics.cpp  splitop.cpp  splitop.hpp  surrogate.cpp  surrogate.hpp  utilities.hpp  vector.cpp  vector.hpp  wvfxn.cpp  wvfxn.hpp
